# Multimodal_ROS_Pipeline

./: README.md  requirements.txt
src/Decision-Manager-ROS-Package/: CMakeLists.txt  README.md  package.xml  setup.py
src/Decision-Manager-ROS-Package/msg/: FrameGroupMessage.msg  IssueMessage.msg
src/Decision-Manager-ROS-Package/src/: decision_manager_runtime.py
src/Decision-Manager-ROS-Package/srv/: TaskResult.srv
src/Dialog-Manager-ROS-Package/: CMakeLists.txt  README.md  package.xml
src/Dialog-Manager-ROS-Package/msg/: FrameMessage.msg
src/Dialog-Manager-ROS-Package/src/: dialog_manager_script.py  hierarchy_knowledge_ONLY_frames.json
src/Dialog-Manager-ROS-Package/srv/: HandleFrame.srv  HandleSuggestion.srv  TTSRequest.srv
src/Gesture_Acquisition_ROS_Package/: CMakeLists.txt  README.md  package.xml
src/Gesture_Acquisition_ROS_Package/src/: web_cam.py
src/Gesture_Recognition_ROS_Package/: CMakeLists.txt  LICENSE  setup.py
src/Gesture_Recognition_ROS_Package/msg/: Pose.msg
src/Gesture_Recognition_ROS_Package/src/: mediapipe_ros.py  movenet_ros.py
src/Issue-Harvester-ROS-Package/: CMakeLists.txt  README.md  package.xml
src/Natural-Language-Understanding-ROS-Package/: CMakeLists.txt  README.md  package.xml
src/Speech-To-Text-ROS-Package/: CMakeLists.txt  README.md  package.xml
src/Task-Manager-ROS-Package/: CMakeLists.txt  README.md  package.xml
src/Text-To-Speech-ROS-Package/: CMakeLists.txt  README.md  package.xml
src/Text-To-Speech-ROS-Package/msg/: TTSMessage.msg
src/Text-To-Speech-ROS-Package/src/: text_to_speech_script.py
(+19 files in other folders)
